tortoise/tortoise.peg
start =
    statements

number_frac
    = "." chars:[0-9]*
        { return "." + chars.join(''); }

number
    = neg:"-"? chars:[0-9]+ frac:number_frac?
        {   var sign = 1;
            if (neg === '-') { sign = -1; }
            return parseFloat(chars.join('') + frac) * sign;
        }

validfirstchar
    = [a-zA-Z_]

validchar
    = [0-9a-zA-Z_]

identifier
    = firstchar:validfirstchar chars:validchar*
        { return firstchar + chars.join(''); }

ws = [ \t\n]*

expression
    = expr:comparative
        { return expr; }

comp_op = "<=" / ">=" / "!=" / "==" "<" / ">"

comparative
    = left:additive ws op:comp_op ws right:comparative
        { return {tag:op, left:left, right:right}; }
    / additive

additive_op = "+" / "-"

additive
    = left:multiplicative ws op:additive_op ws right:additive
        { return {tag:op, left:left, right:right}; }
    / multiplicative

mult_op = "*" / "/"

multiplicative
    = left:primary ws op:mult_op ws right:multiplicative
        { return {tag:op, left:left, right:right}; }
    / primary

primary
    = number
    / v:identifier ws "(" ws ")"
        { return {tag:"call", name:v, args:[]}; }
    / v:identifier ws "(" ws args:arglist ws ")"
        { return {tag:"call", name:v, args:args}; }
    / ident:identifier
        { return {tag:"ident", name:ident}; }
    / "(" ws expr:expression ws ")"
        { return expr; }

comma_expression = "," ws expr:expression
    { return expr; }

arglist
    = first:expression rest:comma_expression*
        { return [first].contact(rest); }

statement
    = v:identifier ws ":=" ws expr:expression ws ";" ws
        { return { tag:":=", left:v, right:expr }; }
    / "var " v:identifier ws ";" ws
        { return { tag:"var", name:v }; }
    / "if" ws "(" ws expr:expression ws ")" ws
        "{" ws body:statements ws "}" ws
        { return { tag:"if", expr:expr, body:body }; }
    / "repeat" ws "(" ws expr:expression ws ")" ws
        "{" ws body:statements ws "}" ws
        { return { tag:"repeat", expr:expr, body:body }; }
    / "define " ws v:identifier ws
        "(" ws ")" ws "{" ws body:statements ws "}" ws
        { return { tag:"define",
                   name:v, args:[], body:body }; }
    / "define " ws v:identifier ws
        "(" ws args:ident_list ws ")" ws
        "{" ws body:statements ws "}" ws
        { return { tag:"define",
                   name:v, args:args, body:body }; }
    / expr:expression ws ";" ws
        { return { tag:"ignore", body:expr }; }

comma_identifier = "," ws v:identifier
        { return v; }

ident_list
    = first:identifier rest:comma_identifier*
        { return [first].concat(rest); }

statements
    = statement*
